# hc-hue

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
config/: .published-device-ids.json  config.toml.example
src/: bridge.rs  commands.rs  config.rs  homecore.rs  logging.rs  main.rs  pairing.rs  sync.rs  translator.rs
src/hue/: api.rs  discovery.rs  mod.rs  models.rs  registry.rs
tests/: e2e_smoke_scenarios.rs  entertainment_integration.rs  grouped_light_isolation.rs  lighting_integration.rs
