[workspace]

[package]
name = "hc-hue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-hue"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
