[workspace]

[package]
name        = "hc-hue"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Philips Hue plugin for homeCore"
repository  = "https://github.com/homeCore-io/hc-hue"

[[bin]]
name = "hc-hue"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { path = "../../sdks/hc-plugin-sdk-rs" }
hc-types           = { path = "../../core/crates/hc-types" }
hc-logging         = { path = "../../core/crates/hc-logging" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
flate2           = "1"
chrono           = "0.4"
